--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://ik.imagekit.io/ievdkoh2e/task_work/logo__1__IDWJkpCrI.svg?updatedAt=1683293409860"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>VPARk</title>
   </head>
   <body>
     <div id="root"></div>
